# predictive-modeling-seafood-demand

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile (30)  README.md  __init__ (1).py  __init__.py  api.ts  label_encoders.pkl  model_service.py  next-env.d.ts  package-lock.json  page.tsx  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json
artefactos/: config_modelo.json  importancia_variables.json  label_encoders.pkl  modelo_mariscos.onnx
backend/: README.md  requirements.txt
backend/app/: __init__.py  logging_config.py  main.py  middleware.py  request_context.py  schemas.py
backend/app/services/: __init__.py  model_service.py
docs/: 01_project_summary.md  01_resumen_del_proyecto.md  02_methodology.md  02_metodologia.md  03_modelo_xgboost.md  03_xgboost_model.md  04_api_prediccion.md  04_prediction_api.md
files/: EXPLICACION_Y_RECOMENDACIONES.md  data_dictionary.csv  eda_report.txt  part2_eda.py  part3_6_features.py  pipeline_forecasting.py  top30_features.csv
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BarRankingChart.tsx  ChatWidget.tsx  DemandSummary.tsx  FilterDrawer.tsx  LimeExplainModal.tsx  PredictionTable.tsx  ReportModal.tsx
frontend/lib/: api.ts  predict.ts  prices.ts
notebooks/: EDA-MARISCOS.ipynb  EDA-MARISCOS.md  Funcion_Prediccion.ipynb  Funcion_Prediccion.md  Modelo_Mariscos.ipynb  Modelo_Mariscos.md
src/mariscos_api/: __init__.py  main.py
tests/: test_health.py
tools/: notebooks.py
